fix: Select and MultiSelect invisible scroll area

--- a/src/MultiSelect.scss
+++ b/src/MultiSelect.scss
@@ -43,6 +43,7 @@
 .skel-MultiSelect_invisible {
   visibility: hidden;
   height: 0;
+  overflow: hidden;
 }
 
 .skel-MultiSelect_placeholder {
