--- a/src/Select.scss
+++ b/src/Select.scss
@@ -35,6 +35,7 @@
 .skel-Select_invisible {
   visibility: hidden;
   height: 0;
+  overflow: hidden;
 }
 
 .skel-Select_placeholder {
